<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TS3 Remote</string>
    <string name="connect">Connect</string>
    <string name="exit">Exit</string>
    <string name="enter_ip">Enter the IP and the API-Key of your computer, where TeamSpeak is running:</string>
    <string name="info">Info</string>
    <string name="no_connection">No connection to TeamSpeak client</string>
    <string name="connection_failed">Connection to %s failed</string>
    <string name="no_server">No TeamSpeak server</string>
    <string name="invalid_auth_key">Not authenticated</string>
    <string name="settings">Settings</string>
    <string name="show_country_flags">Show country flags</string>
    <string name="switch_to_channel">Switch to Channel</string>
    <string name="subscribe_channel">Subscribe to Channel</string>
    <string name="unsubscribe_channel">Unsubscribe from Channel</string>
    <string name="subscribe_all">Subscribe all</string>
    <string name="unsubscribe_all">Unsubscribe from all</string>
    <string name="ip_editText_hint">IP-Address</string>
    <string name="authkey_editText_hint">API-Key</string>
    
</resources>
